new file example

--- a/2019.1
+++ b/2019.1
@@ -1,7 +1,7 @@
 D
-1
-AlgeLin
-Pepe
+3
+Frances
+Maria
 100
 
 D
@@ -10,8 +10,15 @@ Analise
 Pepezada
 100
 
+D
+1
+AlgeLin
+Pepe
+100
+
 A
 19006
-Cesar
+César
 07198677380
-1 2 0
+3 2 1 0
+
