exemplo com nome composto

--- a/2021.1
+++ b/2021.1
@@ -12,19 +12,19 @@ Youtube
 
 D
 1002
-MatDisc
+Matematica Discreta
 Velosum
 100
 
 D
 1001
 Frances
-Bianca
+Maria Bianca
 100
 
 A
 19013
-Campos
+Campos Belo 
 12224033745
 1004 1003 0
 
